<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base_bottom_nav"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/base_bottom_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottomNavi"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:orientation="horizontal"
        android:paddingTop="19.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/base_bottom_nav_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/custom_font_family"
            android:text="@string/btm_navigation_home"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/base_bottom_nav_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="@dimen/navi_text_deactivated_alpha"
            android:fontFamily="@font/custom_font_family"
            android:text="@string/btm_navigation_friends"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="36.79dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/camera_plus_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/base_bottom_nav_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="@dimen/navi_text_deactivated_alpha"
            android:fontFamily="@font/custom_font_family"
            android:text="@string/btm_navigation_message"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/base_bottom_nav_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="@dimen/navi_text_deactivated_alpha"
            android:fontFamily="@font/custom_font_family"
            android:text="@string/btm_navigation_profile"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>